# anylang

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  2fa29135edef_initial_schema.py  a1b2c3d4e5f6_add_payments_table.py  a7b8c9d0e1f2_promo_codes.py  b2c3d4e5f6a7_admin_soft_delete_audit.py  c3d4e5f6a7b8_admin_hardening_indexes.py  c8d9e0f1a2b3_languages_flags.py  d4e5f6a7b8c9_product_top_requests.py  e5f6a7b8c9d0_chat_groups.py  f6a7b8c9d0e1_chat_features_groups.py
backend/app/: __init__.py  main.py
backend/app/api/: deps_admin.py  deps_auth.py
backend/app/core/: config.py  deps.py  errors.py  pagination.py  rate_limit.py  security.py  startup.py  uploads.py
backend/app/db/: __init__.py  redis.py  session.py
backend/app/integrations/: __init__.py  email.py  storage.py  stt.py  translation.py
backend/app/models/: __init__.py  base.py  chat.py  language.py  payment.py  product.py  promo.py  user.py
backend/app/schemas/: auth.py  business.py  chat.py  common.py  countries.py  friends.py  live.py  numbers.py  payment.py  product.py  promo.py  subscription.py  support.py  user.py
backend/app/services/: admin_auth.py  admin_console.py  admin_ops.py  auth.py  business.py  chats.py  countries.py  friends.py  group_admin.py  language_catalog.py  languages.py  live.py  message_features.py  messages.py  numbers.py  otp.py  payments.py  (+5 more)
backend/scripts/: smoke_admin_console.py  smoke_test.py
(+422 files in other folders)
